@@ -53,16 +53,17 @@ setup(name='zope.app.publication',
               'zope.app.zcmlfiles',
               'zope.app.dav',
               'zope.app.zptpage',
+              'zope.principalregistry',
               ]),
     install_requires=['zope.interface',
                       'ZODB3',
+                      'zope.authentication',
                       'zope.component',
                       'zope.error',
                       'zope.i18n',
                       'zope.app.http',
                       'zope.app.applicationcontrol',
                       'zope.app.exception',
-                      'zope.app.security',
                       'setuptools',
                       ],
     include_package_data = True,
