@@ -5,7 +5,8 @@ CHANGES
 3.5.4 (unreleased)
 ------------------
 
-- ...
+- Update imports from zope.app.security to zope.authentication and
+  zope.principalregistry.
 
 3.5.3 (2009-03-13)
 ------------------
